Bug 1835683 - Collapse quick filter toolbar buttons into a 'Filters' dropdown when the window is small. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D179575

--HG--
extra : amend_source : 17c644588977496ed5e4ef5bd68a9ce870636fdd

--- a/mail/themes/shared/mail/quickFilterBar.css
+++ b/mail/themes/shared/mail/quickFilterBar.css
@@ -35,6 +35,11 @@
   background-image: var(--icon-attachment);
 }
 
+#qfd-dropdown {
+  background-image: var(--icon-filter);
+  display: none;
+}
+
 #qfb-results-label {
   margin: 3px;
   text-align: end;
@@ -52,6 +57,21 @@
 @media (-moz-platform: windows-win7) {
   #qfb-qs-textbox {
     margin-block: 4px;
+  }
+}
+
+@container threadPane (max-width: 499px) {
+  #qfb-qs-textbox {
+    min-width: 200px;
+  }
+
+  #qfd-dropdown {
+    display: inline-block;
+    min-width: 22px;
+  }
+
+  .button-group.quickFilterButtons{
+    display: none;
   }
 }
 
